--- a/index.html
+++ b/index.html
@@ -85,17 +85,18 @@
       <h2>What I'm doing lately?</h3>
 
         <p>In september 2022 I started a double Master in UX/UI, train-ing between to the <a
-            href="https://www.esad-amiens.fr/">ESAD</a> of Amiens and the <a href="https://www.utc.fr/">UTC</a> of
+            href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens and the <a href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a> of
           Compiègne.</p>
 
         <p>This year I'm really motivated about making websites for people, for things, for fun... I have a lot of ideas
           that I'm working on! <a href="mailto:pablomoreno@proton.me">Tell me</a> if you are interested on making yours!
         </p>
 
-        <p>I'm reading a <a href="https://www.are.na/pablo-moreno/textes-sf-b1sgau1y">lot of articles</a> for my essay, and for more "fun" litterature i'm reading a book about Khomeini.</p>
+        <p>I'm reading a <a href="https://www.are.na/pablo-moreno/textes-sf-b1sgau1y">lot of articles</a> for my essay,
+          and for more "fun" litterature i'm reading a book about Khomeini.</p>
 
         <p>You can see <a href="/my-computer/">what I use on my computer</a> or visit my <a
-            href="https://www.are.na/pablo-moreno">Are.na</a> !</p>
+            href="https://www.are.na/pablo-moreno/3w-textes">Are.na</a> !</p>
 
         <p>See ya!</p>
         <p style="transform: rotate(-3deg);margin:-5px 0 0 10px">pablo ⚡️</p>
@@ -128,25 +129,72 @@
           <small>3 words 4 europe </small>
         </div>
         <span>[wip]</span>
+      </a>
 
+      <a href="/bg/index.html">
+        <div><img src="projects-show/bg.png">
+          <small>Bulgarie</small>
+        </div>
+        <span>2023</span>
+      </a>
+
+      <a href="/lyrics/index.html">
+        <div><img src="projects-show/lyrics.png">
+          <small>Lyrics 4 me</small>
+        </div>
+        <span>2023</span>
+      </a>
+
+      <a href="https://pablo-archi.online">
+        <div><img src="projects-show/pablo-archipng.png">
+          <small>Virtualisations d'archi</small>
+        </div>
+        <span>2023</span>
       </a>
 
       <a href="https://vivirsinti-libro.com/">
         <div><img src="projects-show/vivir-sin-ti.png">
           <small>Vivir sin tí book</small>
         </div>
+        <span>2022</span>
       </a>
 
-      <a href="https://pablo-archi.online">
-        <div><img src="projects-show/pablo-archipng.png">
-          <small>Pablo Virtualisations</small>
+      <a href="/autre-temps/index.html">
+        <div><img src="projects-show/autre-temps.png">
+          <small>Autre Temps</small>
         </div>
+        <span>2021</span>
       </a>
+
+      <a href="/sunsets/index.html">
+        <div><img src="projects-show/sunsets.png">
+          <small>Sunset(s) 🌅</small>
+        </div>
+        <span>2021</span>
+      </a>
+
+
 
       <a href="https://pablo.energy/glace-sans-tain/">
         <div><img src="projects-show/glace-sans-tain.png">
           <small>"Glace sans tain" essay</small>
         </div>
+        <span>2021</span>
+      </a>
+
+
+      <a href="https://morenoarquitecto.com/">
+        <div><img src="projects-show/moreno-arquitecto.png">
+          <small>Moreno Arquitecto studio's</small>
+        </div>
+        <span>2020</span>
+      </a>
+
+      <a href="https://pablo.energy/voeux2021/">
+        <div><img src="projects-show/voeux-2021.png">
+          <small>2021 new year card</small>
+        </div>
+        <span>2020</span>
       </a>
 
       <!-- <a href="https://soyjuanmoreno.com/">
@@ -155,13 +203,6 @@
         </div>
       </a> -->
 
-      <a href="https://morenoarquitecto.com/">
-        <div><img src="projects-show/moreno-arquitecto.png">
-          <small>Moreno Arquitecto studio's</small>
-        </div>
-      </a>
-
-
       <!-- <a href="https://andreaguilera.com/">
         <div><img src="projects-show/andrea-aguilera.png">
         <small>Andrea Aguilera's</small>
@@ -169,52 +210,55 @@
       </a> -->
 
 
-      <a href="https://pablo.energy/voeux2021/">
-        <div><img src="projects-show/voeux-2021.png">
-          <small>2021 new year card</small>
-        </div>
-      </a>
-
 
 
       <h3>3D animation</h3>
 
-
-      <a href="https://vimeo.com/678345388">
-        <div><img src="projects-show/tribut-cafe.png">
-          <small>Coffe plant animation</small>
+      <a href="https://vimeo.com/793921849">
+        <div><img src="projects-show/jpo-julie.png">
+          <small>Open Days of ESAD (proposition)</small>
         </div>
+        <span>2023</span>
       </a>
 
       <a href="https://vimeo.com/675012283">
         <div><img src="projects-show/copa-decantadora.png">
           <small>Wine product show</small>
         </div>
+        <span>2022</span>
       </a>
 
-      <a href="https://vimeo.com/793921849">
-        <div><img src="projects-show/jpo-julie.png">
-          <small>Open Days of ESAD (proposition)</small>
+      <a href="https://vimeo.com/678345388">
+        <div><img src="projects-show/tribut-cafe.png">
+          <small>Coffe plant animation</small>
         </div>
+        <span>2021</span>
+      </a>
+
+
+      <a href="https://vimeo.com/678345324">
+        <div><img src="projects-show/more/t_anthropocene.png">
+          <small>Anthropocene hole</small>
+        </div>
+        <span>2020</span>
       </a>
 
       <h3>✢ things</h3>
 
       <div class="others">
-        <a href="https://vimeo.com/678345324"><img src="projects-show/more/t_anthropocene.png">
-          <a href="projects-show/more/t_borges-estienne.jpg"><img src="projects-show/more/t_borges-estienne.jpg"></a>
-          <a href="projects-show/more/t_cimetiere-graville.jpg"><img
-              src="projects-show/more/t_cimetiere-graville.jpg"></a>
-          <a href="projects-show/more/t_dissuation-nucleaire.png"><img
-              src="projects-show/more/t_dissuation-nucleaire.png"></a>
-          <a href="projects-show/more/t_doom-day.jpg"><img src="projects-show/more/t_doom-day.jpg"></a>
-          <a href="projects-show/more/t_esadhar-books.jpg"><img src="projects-show/more/t_esadhar-books.jpg"></a>
-          <a href="https://vimeo.com/686388410"><img src="projects-show/more/t_glace-sans-tain.webp"></a>
-          <a href="https://vimeo.com/793921665"><img src="projects-show/more/t_ketamina.png"></a>
-          <a href="projects-show/more/t_more-things.webp"><img src="projects-show/more/t_more-things.webp"></a>
-          <a href="https://vimeo.com/678350239"><img src="projects-show/more/t_paysages-vagues.JPG"></a>
-          <a href="https://vimeo.com/678345423"><img src="projects-show/more/t_souvenirs-abrupts.jpg"></a>
-          <a href="projects-show/more/t_tramway.jpg"><img src="projects-show/more/t_tramway.jpg"></a>
+        <a href="projects-show/more/t_borges-estienne.jpg"><img src="projects-show/more/t_borges-estienne.jpg"></a>
+        <a href="projects-show/more/t_cimetiere-graville.jpg"><img
+            src="projects-show/more/t_cimetiere-graville.jpg"></a>
+        <a href="projects-show/more/t_dissuation-nucleaire.png"><img
+            src="projects-show/more/t_dissuation-nucleaire.png"></a>
+        <a href="projects-show/more/t_doom-day.jpg"><img src="projects-show/more/t_doom-day.jpg"></a>
+        <a href="projects-show/more/t_esadhar-books.jpg"><img src="projects-show/more/t_esadhar-books.jpg"></a>
+        <a href="https://vimeo.com/686388410"><img src="projects-show/more/t_glace-sans-tain.webp"></a>
+        <a href="https://vimeo.com/793921665"><img src="projects-show/more/t_ketamina.png"></a>
+        <a href="projects-show/more/t_more-things.webp"><img src="projects-show/more/t_more-things.webp"></a>
+        <a href="https://vimeo.com/678350239"><img src="projects-show/more/t_paysages-vagues.JPG"></a>
+        <a href="https://vimeo.com/678345423"><img src="projects-show/more/t_souvenirs-abrupts.jpg"></a>
+        <a href="projects-show/more/t_tramway.jpg"><img src="projects-show/more/t_tramway.jpg"></a>
       </div>
 
 
