--- a/my-computer/index.html
+++ b/my-computer/index.html
@@ -89,6 +89,12 @@
       Enhancer for Youtube <span>· loops on youtube</span>
     </li>
     <li>
+      Music Mode for YouTube <span>· no video for music on youtube</span>
+    </li>
+    <li>
+      Humble New Tab Page <span>· super new tab</span>
+    </li>
+    <li>
       KeePassXC <span>· for the app</span>
     </li>
     <li>
