--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             href="https://www.are.na/pablo-moreno/3w-textes">Are.na</a> !</p>
 
         <p>See ya!</p>
-        <p style="transform: rotate(-3deg);margin:-5px 0 0 10px">pablo ⚡️</p>
+        <p style="margin:0 0 0 10px">pablo ⚡️</p>
     </div>
 
 
