--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p>I'm reading a <a href="https://www.are.na/pablo-moreno/textes-sf-b1sgau1y">lot of articles</a> for my essay,
           and for more "fun" litterature i'm reading a book about Khomeini.</p>
 
-        <p>You can see <a href="/pages/my-computer/">what I use on my computer</a> or visit my <a
+        <p>You can see <a href="/my-computer/">what I use on my computer</a> or visit my <a
             href="https://www.are.na/pablo-moreno/3w-textes">Are.na</a> !</p>
 
         <p>See ya!</p>
@@ -105,7 +105,7 @@
 
       <h3>Websites</h3>
 
-      <a href="/pages/catography/index.html" class="wip">
+      <a href="/catography/index.html" class="wip">
         <div>
           <img src="img/cartography.png">
           <small>Web Cartography</small>
@@ -137,14 +137,14 @@
         <span style="color: greenyellow">[wip]</span>
       </a>
 
-      <a href="/pages/bg/index.html">
+      <a href="/bg/index.html">
         <div><img src="img/bg.png">
           <small>Bulgarie</small>
         </div>
         <span>2023</span>
       </a>
 
-      <a href="/pages/lyrics/index.html">
+      <a href="/lyrics/index.html">
         <div><img src="img/lyrics.png">
           <small>Lyrics 4 me</small>
         </div>
@@ -165,14 +165,14 @@
         <span>2022</span>
       </a>
 
-      <a href="/pages/autre-temps/index.html">
+      <a href="/autre-temps/index.html">
         <div><img src="img/autre-temps.png">
           <small>Autre Temps</small>
         </div>
         <span>2021</span>
       </a>
 
-      <a href="/pages/sunsets/index.html">
+      <a href="/sunsets/index.html">
         <div><img src="img/sunsets.png">
           <small>Sunset(s) 🌅</small>
         </div>
@@ -181,7 +181,7 @@
 
 
 
-      <a href="/pages/glace-sans-tain/">
+      <a href="/glace-sans-tain/">
         <div><img src="img/glace-sans-tain.png">
           <small>"Glace sans tain" essay</small>
         </div>
@@ -196,7 +196,7 @@
         <span>2020</span>
       </a>
 
-      <a href="/pages/voeux2021/">
+      <a href="/voeux2021/">
         <div><img src="img/voeux-2021.png">
           <small>2021 new year card</small>
         </div>
