--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -20,6 +20,7 @@
     <div id="blocks" class="blocks">
     </div>
 
+    <iframe id="video" width="300" height="150"></iframe>
 
 
     <!-- <div id="credits"><a href="https://pablo.energy">pablo</a>'s collection of songs lyrics.</div> -->
