--- a/404.html
+++ b/404.html
@@ -23,21 +23,109 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
-  <!-- Links -->
-  <link type="text/css" rel="stylesheet" href="assets/css/fonts.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/404.css" />
 
   <link rel="preload" href="/assets/fonts/rubik-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+
+  <style>
+    /*
+* Prefixed by:
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+@font-face {
+    font-family: 'rubikregular';
+    src: url('/assets/fonts/Rubik/rubik-regular-webfont.woff2') format('woff2'),
+         url('assets/fonts/Rubik/rubik-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap
+}
+
+@font-face {
+    font-family: 'rubikbold';
+    src: url('assets/fonts/Rubik/rubik-bold-webfont.woff2') format('woff2'),
+         url('assets/fonts/Rubik/rubik-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap
+}
+
+:root {
+
+}
+
+html,
+body,
+div,
+p {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  vertical-align: baseline;
+  font-family: 'rubikregular';
+  scrollbar-width: none;
+}
+
+
+html {
+  text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
+  height: 100%;
+  width: 100%;
+  line-height: 1.4;
+  overflow: scroll;
+  overflow-x: hidden;
+  /* cursor: url(../pointer/blue.cur), pointer; */
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  width: 100%;
+
+  background-color: var(--thisColor);
+}
+  </style>
 </head>
 <body>
     
 <div>
-    I lost the page you wanted to visit<br>
+    I lost the page you want to visit...br>
     Please return to <a href="https://pablo.energy">www.pablo.energy</a><br>
     Thanks ✿
 </div>
 
-<script id="script" src="assets/js/thisColor.js"></script>
+
+<script>
+function witchColor() {
+  var randomColor = [ 'Aqua', 'Aquamarine', 'Bisque', 'Black', 'BlanchedAlmond', 'Blue', 'BlueViolet', 'Brown', 'BurlyWood', 'CadetBlue', 'Chartreuse', 'Chocolate', 'Coral', 'CornflowerBlue', 'Crimson', 'Cyan', 'DarkBlue', 'DarkCyan', 'DarkGoldenRod', 'DarkGray', 'DarkGrey', 'DarkGreen', 'DarkKhaki', 'DarkMagenta', 'DarkOliveGreen', 'Darkorange', 'DarkOrchid', 'DarkRed', 'DarkSalmon', 'DarkSeaGreen', 'DarkSlateBlue', 'DarkSlateGray', 'DarkSlateGrey', 'DarkTurquoise', 'DarkViolet', 'DeepPink', 'DeepSkyBlue', 'DimGray', 'DimGrey', 'DodgerBlue', 'FireBrick', 'ForestGreen', 'Fuchsia', 'Gainsboro', 'Gold', 'GoldenRod', 'Gray', 'Grey', 'Green', 'GreenYellow', 'HotPink', 'IndianRed', 'Indigo', 'Khaki', 'Lavender', 'LawnGreen', 'LemonChiffon', 'LightBlue', 'LightCoral', 'LightGray', 'LightGrey', 'LightGreen', 'LightPink', 'LightSalmon', 'LightSeaGreen', 'LightSkyBlue', 'LightSlateGray', 'LightSlateGrey', 'LightSteelBlue', 'Lime', 'LimeGreen', 'Magenta', 'Maroon', 'MediumAquaMarine', 'MediumBlue', 'MediumOrchid', 'MediumPurple', 'MediumSeaGreen', 'MediumSlateBlue', 'MediumSpringGreen', 'MediumTurquoise', 'MediumVioletRed', 'MidnightBlue', 'MistyRose', 'Moccasin', 'NavajoWhite', 'Navy', 'Olive', 'OliveDrab', 'Orange', 'OrangeRed', 'Orchid', 'PaleGoldenRod', 'PaleGreen', 'PaleTurquoise', 'PaleVioletRed', 'PapayaWhip', 'PeachPuff', 'Peru', 'Pink', 'Plum', 'PowderBlue', 'Purple', 'RebeccaPurple', 'Red', 'RosyBrown', 'RoyalBlue', 'SaddleBrown', 'Salmon', 'SandyBrown', 'SeaGreen', 'Sienna', 'Silver', 'SkyBlue', 'SlateBlue', 'SlateGray', 'SlateGrey', 'SpringGreen', 'SteelBlue', 'Tan', 'Teal', 'Thistle', 'Tomato', 'Turquoise', 'Violet', 'Wheat', 'Yellow', 'YellowGreen'][Math.floor(Math.random() * 127)]
+
+
+  console.log(randomColor);
+  var newColor=":root{--thisColor: " + randomColor + ";}"
+
+  var styleSheet = document.createElement("style")
+  styleSheet.innerText = newColor
+  document.head.appendChild(styleSheet)
+}
+
+witchColor()
+</script>
 
 </body>
 </html>
