--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
   <meta name="theme-color" content="#ffffff">
 
 
-  <link rel="preload" href="/assets/fonts/rubik-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="https://pablo.energy/assets/fonts/Rubik/rubik-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
 
   <style>
     /*
@@ -35,17 +35,8 @@
 */
 @font-face {
     font-family: 'rubikregular';
-    src: url('/assets/fonts/Rubik/rubik-regular-webfont.woff2') format('woff2'),
-         url('assets/fonts/Rubik/rubik-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap
-}
-
-@font-face {
-    font-family: 'rubikbold';
-    src: url('assets/fonts/Rubik/rubik-bold-webfont.woff2') format('woff2'),
-         url('assets/fonts/Rubik/rubik-bold-webfont.woff') format('woff');
+    src: url('https://pablo.energy/assets/fonts/Rubik/rubik-regular-webfont.woff2') format('woff2'),
+         url('https://pablo.energy/assets/fonts/Rubik/rubik-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap
@@ -105,7 +96,7 @@ body {
 <body>
     
 <div>
-    I lost the page you want to visit...br>
+    I lost the page you want to visit...<br>
     Please return to <a href="https://pablo.energy">www.pablo.energy</a><br>
     Thanks ✿
 </div>
