--- a/web-archive/index.html
+++ b/web-archive/index.html
@@ -7,7 +7,7 @@
     <title>꒰ web archive ꒱</title>
 
     <link type="text/css" rel="stylesheet" href="assets/web-archive.css" />
-    <link rel="stylesheet" href="../assets/css/fonts.css">
+    <link rel="stylesheet" href="../assets/fonts/fonts.css">
 
  
 </head>
