--- a/sunday-sites/index.html
+++ b/sunday-sites/index.html
@@ -8,7 +8,7 @@
     </title>
 
     <link type="text/css" rel="stylesheet" href="../web-archive/assets/web-archive.css" />
-    <link rel="stylesheet" href="../assets/css/fonts.css">
+    <link rel="stylesheet" href="../assets/fonts/fonts.css">
 
  
 
