--- a/web-archive/allworks.html
+++ b/web-archive/allworks.html
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Links -->
-    <link type="text/css" rel="stylesheet" href="assets/css/fonts.css" />
+    <link type="text/css" rel="stylesheet" href="assets/fonts/fonts.css" />
     <link type="text/css" rel="stylesheet" href="assets/css/style.css" />
     <link type="text/css" rel="stylesheet" href="assets/css/mobile.css" />
     <link type="text/css" rel="stylesheet" href="assets/css/addons.css" />
