--- a/presence/index.html
+++ b/presence/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <h1>Who's at extrapractice?</h1>
+    <h1>Who's at extrapractice <a href="https://docs.google.com/spreadsheets/d/1tFYPLof6lySCKcvlNXgo9UkL7syTFqNt8sA9PkcT38k/edit#gid=0">?</a></h1>
 
     <div class="people"></div>
 
