--- a/sunday-sites/index.html
+++ b/sunday-sites/index.html
@@ -22,6 +22,7 @@
         <ul>
           <li><a href="/sunday-sites/making-notes">making-notes</a></li>
           <li><a href="/sunday-sites/practice">practice</a></li>
+          <li><a href="/sunday-sites/changing/">changing</a></li>
          </ul>
 </div>
 
