--- a/pages/index.html
+++ b/pages/index.html
@@ -29,6 +29,8 @@
     </table>
   </div>
 
+
+<!-- THIS IS THE GADGET ABOUT THE PASSWORD -->
   <form name="form" class="enter">
     <input id="button" name="submit" style="display:none"/>
     <input id="texte" type='text' name='texte' value='⊙.☉' onkeypress="clickPress(event)" />
