--- a/presence/index.html
+++ b/presence/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>presence</title>
+    <title>presence.extrapractice.space</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Who's at extrapractice <a href="https://docs.google.com/spreadsheets/d/1tFYPLof6lySCKcvlNXgo9UkL7syTFqNt8sA9PkcT38k/edit#gid=0">?</a></h1>
+    <h1>Who's practicing?</h1>
+
+    <a class="add" href="https://docs.google.com/spreadsheets/d/1tFYPLof6lySCKcvlNXgo9UkL7syTFqNt8sA9PkcT38k/edit#gid=0">update</a>
 
     <div class="people"></div>
 
