--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -22,6 +22,9 @@
 
     <iframe id="video" width="300" height="150"></iframe>
 
+    <button id="open">open spreadsheet</button>
+
+    <iframe id="spreadsheet" src="https://docs.google.com/spreadsheets/d/1RfXl7_9w-Sz1luLR-E_XNnl5DG4kEL4grT9gPMiO1tI/edit#gid=0"></iframe>
 
     <!-- <div id="credits"><a href="https://pablo.energy">pablo</a>'s collection of songs lyrics.</div> -->
 
