--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <a href="/catography/index.html" class="wip">
         <div>
-          <img src="img/cartography.jpg">
+          <img src="assets/img/cartography.jpg">
           <small>Web Cartography</small>
         </div>
         <span style="color: greenyellow">[wip]</span>
@@ -115,7 +115,7 @@
 
       <a href="https://concluded-openspaces.netlify.app/" class="wip">
         <div>
-          <img src="img/concluded.jpg">
+          <img src="assets/img/concluded.jpg">
           <small>Concluded Openspaces</small>
         </div>
         <span style="color: greenyellow">[wip]</span>
@@ -123,7 +123,7 @@
 
       <a href="https://calendarie2023.netlify.app/" class="wip">
         <div>
-          <img src="img/calendarie1.jpg">
+          <img src="assets/img/calendarie1.jpg">
           <small>Calendarie 2023</small>
         </div>
         <span style="color: greenyellow">[wip]</span>
@@ -131,49 +131,49 @@
 
       <a href="https://3-words-for.eu/" class="wip">
         <div>
-          <img src="img/3words.jpg">
+          <img src="assets/img/3words.jpg">
           <small>3 words 4 europe </small>
         </div>
         <span style="color: greenyellow">[wip]</span>
       </a>
 
       <a href="/bg/index.html">
-        <div><img src="img/bg.jpg">
+        <div><img src="assets/img/bg.jpg">
           <small>Bulgarie</small>
         </div>
         <span>2023</span>
       </a>
 
       <a href="/lyrics/index.html">
-        <div><img src="img/lyrics.jpg">
+        <div><img src="assets/img/lyrics.jpg">
           <small>Lyrics 4 me</small>
         </div>
         <span>always more songs</span>
       </a>
 
       <a href="https://pablo-archi.online">
-        <div><img src="img/pablo-archipng.jpg">
+        <div><img src="assets/img/pablo-archipng.jpg">
           <small>Virtualisations d'archi</small>
         </div>
         <span>2023</span>
       </a>
 
       <a href="https://vivirsinti-libro.com/">
-        <div><img src="img/vivir-sin-ti.jpg">
+        <div><img src="assets/img/vivir-sin-ti.jpg">
           <small>Vivir sin tí book</small>
         </div>
         <span>2022</span>
       </a>
 
       <a href="/autre-temps/index.html">
-        <div><img src="img/autre-temps.jpg">
+        <div><img src="assets/img/autre-temps.jpg">
           <small>Autre Temps</small>
         </div>
         <span>2021</span>
       </a>
 
       <a href="/sunsets/index.html">
-        <div><img src="img/sunsets.jpg">
+        <div><img src="assets/img/sunsets.jpg">
           <small>Sunset(s) 🌅</small>
         </div>
         <span>2021</span>
@@ -182,7 +182,7 @@
 
 
       <a href="/glace-sans-tain/">
-        <div><img src="img/glace-sans-tain.jpg">
+        <div><img src="assets/img/glace-sans-tain.jpg">
           <small>"Glace sans tain" essay</small>
         </div>
         <span>2021</span>
@@ -190,27 +190,27 @@
 
 
       <a href="https://morenoarquitecto.com/">
-        <div><img src="img/moreno-arquitecto.jpg">
+        <div><img src="assets/img/moreno-arquitecto.jpg">
           <small>Moreno Arquitecto studio's</small>
         </div>
         <span>2020</span>
       </a>
 
       <a href="/voeux2021/">
-        <div><img src="img/voeux-2021.jpg">
+        <div><img src="assets/img/voeux-2021.jpg">
           <small>2021 new year card</small>
         </div>
         <span>2020</span>
       </a>
 
       <!-- <a href="https://soyjuanmoreno.com/">
-        <div><img src="img/juan-moreno.jpg">
+        <div><img src="assets/img/juan-moreno.jpg">
         <small>Juan Moreno's</small>
         </div>
       </a> -->
 
       <!-- <a href="https://andreaguilera.com/">
-        <div><img src="img/andrea-aguilera.jpg">
+        <div><img src="assets/img/andrea-aguilera.jpg">
         <small>Andrea Aguilera's</small>
         </div>
       </a> -->
@@ -221,21 +221,21 @@
       <h3>3D animation</h3>
 
       <a href="https://vimeo.com/793921849">
-        <div><img src="img/jpo-julie.jpg">
+        <div><img src="assets/img/jpo-julie.jpg">
           <small>Open Days of ESAD (proposition)</small>
         </div>
         <span>2023</span>
       </a>
 
       <a href="https://vimeo.com/675012283">
-        <div><img src="img/copa-decantadora.jpg">
+        <div><img src="assets/img/copa-decantadora.jpg">
           <small>Wine product show</small>
         </div>
         <span>2022</span>
       </a>
 
       <a href="https://vimeo.com/678345388">
-        <div><img src="img/tribut-cafe.jpg">
+        <div><img src="assets/img/tribut-cafe.jpg">
           <small>Coffe plant animation</small>
         </div>
         <span>2021</span>
@@ -243,7 +243,7 @@
 
 
       <a href="https://vimeo.com/678345324">
-        <div><img src="img/more/t_anthropocene.jpg">
+        <div><img src="assets/img/more/t_anthropocene.jpg">
           <small>Anthropocene hole</small>
         </div>
         <span>2020</span>
@@ -252,19 +252,19 @@
       <h3>✢ things</h3>
 
       <div class="others">
-        <a href="img/more/t_borges-estienne.jpg"><img src="img/more/t_borges-estienne.jpg"></a>
-        <a href="img/more/t_cimetiere-graville.jpg"><img
-            src="img/more/t_cimetiere-graville.jpg"></a>
-        <a href="img/more/t_dissuation-nucleaire.jpg"><img
-            src="img/more/t_dissuation-nucleaire.jpg"></a>
-        <a href="img/more/t_doom-day.jpg"><img src="img/more/t_doom-day.jpg"></a>
-        <a href="img/more/t_esadhar-books.jpg"><img src="img/more/t_esadhar-books.jpg"></a>
-        <a href="https://vimeo.com/686388410"><img src="img/more/t_glace-sans-tain.webp"></a>
-        <a href="https://vimeo.com/793921665"><img src="img/more/t_ketamina.jpg"></a>
-        <a href="img/more/t_more-things.webp"><img src="img/more/t_more-things.webp"></a>
-        <a href="https://vimeo.com/678350239"><img src="img/more/t_paysages-vagues.JPG"></a>
-        <a href="https://vimeo.com/678345423"><img src="img/more/t_souvenirs-abrupts.jpg"></a>
-        <a href="img/more/t_tramway.jpg"><img src="img/more/t_tramway.jpg"></a>
+        <a href="assets/img/more/t_borges-estienne.jpg"><img src="assets/img/more/t_borges-estienne.jpg"></a>
+        <a href="assets/img/more/t_cimetiere-graville.jpg"><img
+            src="assets/img/more/t_cimetiere-graville.jpg"></a>
+        <a href="assets/img/more/t_dissuation-nucleaire.jpg"><img
+            src="assets/img/more/t_dissuation-nucleaire.jpg"></a>
+        <a href="assets/img/more/t_doom-day.jpg"><img src="assets/img/more/t_doom-day.jpg"></a>
+        <a href="assets/img/more/t_esadhar-books.jpg"><img src="assets/img/more/t_esadhar-books.jpg"></a>
+        <a href="https://vimeo.com/686388410"><img src="assets/img/more/t_glace-sans-tain.webp"></a>
+        <a href="https://vimeo.com/793921665"><img src="assets/img/more/t_ketamina.jpg"></a>
+        <a href="assets/img/more/t_more-things.webp"><img src="assets/img/more/t_more-things.webp"></a>
+        <a href="https://vimeo.com/678350239"><img src="assets/img/more/t_paysages-vagues.JPG"></a>
+        <a href="https://vimeo.com/678345423"><img src="assets/img/more/t_souvenirs-abrupts.jpg"></a>
+        <a href="assets/img/more/t_tramway.jpg"><img src="assets/img/more/t_tramway.jpg"></a>
       </div>
 
 
