--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -20,8 +20,8 @@
     <div id="blocks" class="blocks">
     </div>
     
-    <button id="open">open spreadsheet</button>
-    <iframe id="spreadsheet" src="https://docs.google.com/spreadsheets/d/1RfXl7_9w-Sz1luLR-E_XNnl5DG4kEL4grT9gPMiO1tI/edit#gid=0"></iframe>
+    <button id="open">add + lyrics</button>
+    <iframe id="spreadsheet" src=""></iframe>
     
 
 
