--- a/lune/index.html
+++ b/lune/index.html
@@ -19,6 +19,7 @@
     </div>
 
     <script id="script" src="assets/js/moon.js"></script>
+    <script id="script" src="assets/js/mobile-height.js"></script>
     
 </body>
 </html>
