--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -17,7 +17,7 @@
 
     <div id="blocks" class="blocks"></div>
 
-    <button id="open">add + lyrics</button>
+    <button id="open"></button>
     <iframe id="spreadsheet" src=""></iframe>
 
 
