--- a/filsrouges/index.html
+++ b/filsrouges/index.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
+    <video id="video" width="100%" height="100%" autoplay></video>
+
     
-    <!-- <div class="line one"></div>
-    <div class="line two"></div>
-    <div class="line three"></div> -->
 
     <h1><a href="#top">Pelote de fils rouges</a></h1>
 
@@ -81,6 +80,7 @@
 
     <script id="script" src="assets/js/script.js"></script>
     <script id="script" src="assets/js/import.js"></script>
+    <script id="script" src="assets/js/mobile-height.js"></script>
 
 </body>
 
