--- a/fils-rouges/index.html
+++ b/fils-rouges/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-    <video id="video" width="100%" height="100%" autoplay></video>
+    
+    <div class="need-rotation">
+        <img src="assets/rotate.png">
+    </div>
 
     
 
@@ -20,8 +23,6 @@
 
     <h2>
         22 septembre 2023 à 20h au <a href="https://goo.gl/maps/FtnqiNvVgiZJjsDT9">Cinéma Orson Welles (MCA)</a></h2>
-
-
     <div class="box overlayg">
     </div>
 
@@ -33,10 +34,10 @@
     <div class="block big">
 
         <div class="cote gauche">
-            <a href="">RÉSERVEZ ICI!</a>
+            <a href="" style="font-size: 3vw;">RÉSERVEZ ICI!</a>
         </div>
         <div class="cote droite">
-            <p>
+            <p style="font-size: 3vw;">
                 Projection de courts-metrages des étudiant·e·s de <a href="https://waide-somme.fr" target="_blank">Waide
                     Somme</a>
             </p>
@@ -78,7 +79,6 @@
     </div>
 
 
-    <script id="script" src="assets/js/script.js"></script>
     <script id="script" src="assets/js/import.js"></script>
     <script id="script" src="assets/js/mobile-height.js"></script>
 
