--- a/fils-rouges/index.html
+++ b/fils-rouges/index.html
@@ -12,6 +12,17 @@
 </head>
 
 <body>
+
+    <div class="line one"></div>
+    <div class="line two"></div>
+
+    <div class="options">
+        <span>Options:</span>
+        <span id="close">✕</span>
+        <button id="trous">Activer trous</button>
+        <button id="filtre">Filtre images</button>
+        <button id="lignes">Montrer lignes</button>
+    </div>
     
     <div class="need-rotation">
         <img src="assets/rotate.png">
@@ -23,9 +34,9 @@
 
     <h2>
         22 septembre 2023 à 20h au <a href="https://goo.gl/maps/FtnqiNvVgiZJjsDT9">Cinéma Orson Welles (MCA)</a></h2>
+    
     <div class="box overlayg">
     </div>
-
 
     <div class="box overlayd">
     </div>
@@ -79,6 +90,7 @@
     </div>
 
 
+    <script id="script" src="assets/js/script.js"></script>
     <script id="script" src="assets/js/import.js"></script>
     <script id="script" src="assets/js/mobile-height.js"></script>
 
