--- a/fils-rouges/index.html
+++ b/fils-rouges/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="line one"></div>
+    <!-- <div class="line one"></div>
     <div class="line two"></div>
 
     <div class="options">
@@ -22,7 +22,7 @@
         <button id="trous">Activer trous</button>
         <button id="filtre">Filtre images</button>
         <button id="lignes">Montrer lignes</button>
-    </div>
+    </div> -->
     
     <div class="need-rotation">
         <img src="assets/rotate.png">
