--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <link rel="canonical" href="https://pablo.energy">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.jpg">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.jpg">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.jpg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="/assets/favicon/site.webmanifest">
   <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
@@ -68,8 +68,8 @@
             alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain" id="app"></img>
         </div>
         <div class="card-contact">
+          <a onclick="showMore()" rel="me">more?</a>
           <a onclick="copyMail()" rel="me">E-mail</a>
-          <a href="https://read.cv/pablomoreno">CV</a>
         </div>
       </div>
       <div id="mailcopied">email copied!</div>
@@ -279,8 +279,9 @@
     <p>♻️ ⤼ 💤 ⤼ ⏳ ⤼ 🌄</p>
   </div>
 
-  <script id="script" src="assets/js/script.js"></script>
+  <script id="script" src="assets/js/mobile-height.js"></script>
   <script id="script" src="assets/js/thisColor.js"></script>
+  <script id="script" src="assets/js/script.js"></script>
 
   <script id="script" src="web-archive/assets/web-archive.js"></script>
 
