--- a/fils-rouges/index.html
+++ b/fils-rouges/index.html
@@ -13,24 +13,16 @@
 
 <body>
 
-    <!-- <div class="line one"></div>
+    <div class="line one"></div>
     <div class="line two"></div>
-
-    <div class="options">
-        <span>Options:</span>
-        <span id="close">✕</span>
-        <button id="trous">Activer trous</button>
-        <button id="filtre">Filtre images</button>
-        <button id="lignes">Montrer lignes</button>
-    </div> -->
     
     <div class="need-rotation">
         <img src="assets/rotate.png">
     </div>
 
-    
-
-    <h1><a href="#top">Pelote de fils rouges</a></h1>
+    <h1><a href="#top">Pelote de fils rouges</a>
+    <br>
+    <span id="demo">dans <span id="count"></span></h1>
 
     <h2>
         22 septembre 2023 à 20h au <a href="https://goo.gl/maps/FtnqiNvVgiZJjsDT9">Cinéma Orson Welles (MCA)</a></h2>
@@ -45,7 +37,9 @@
     <div class="block big">
 
         <div class="cote gauche">
-            <a href="" style="font-size: 3vw;">RÉSERVEZ ICI!</a>
+            <a href="" style="font-size: 3vw;" id="rsvp">RÉSERVEZ ICI!</a>
+
+            <a href="programme.html" style="font-size: 3vw;" id="prog">PROGRAMME</a>
         </div>
         <div class="cote droite">
             <p style="font-size: 3vw;">
@@ -57,23 +51,6 @@
     </div>
 
     <div class="inside"></div>
-
-<!-- 
-    <div class="block">
-        <div class="cote gauche">
-            <img src="assets/img/image.jpg">
-        </div>
-
-        <div class="cote droite">
-            <h3>Titre du courtmetrage</h3>
-            <small>Auteurice, année et durée</small>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus facilis dolorem et aliquam perferendis
-                autem tenetur, officia alias ratione dolore suscipit! Voluptatum amet aperiam illo culpa fugit.
-                Doloribus, velit nesciunt.</p>
-        </div>
-    </div>
- -->
-
 
     <div class="block final">
 
