--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <span id="whatNew">pablo giving ⚡️</span>
   </div>
 
+  <span class="time"></span>
+
   <!-- <div class="right"> <img src="assets/me.jpg"         alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain"></img></div> -->
 
   <div class="screen-home nonight">
@@ -68,8 +70,8 @@
             alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain" id="app"></img>
         </div>
         <div class="card-contact">
-          <a onclick="copyMail()" rel="me">E-mail</a>
           <a onclick="showMore()" rel="me">more?</a>
+          <a onclick="copyMail()" rel="me">E-mail</a>
         </div>
       </div>
       <div id="mailcopied">email copied!</div>
