--- a/para-mateo/index.html
+++ b/para-mateo/index.html
@@ -35,7 +35,7 @@
 
         <div class="down">
             <p>28 de agosto 2023</p>
-            <a href="assets/img/pablo.JPG">de pablo</a>
+            <a href="assets/img/pablo.jpg">de pablo</a>
             <span>muak!</span>
         </div>
 
