--- a/para-mateo/index.html
+++ b/para-mateo/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para Mateo</title>
+    <title>Mateoooo</title>
     <meta name="description" content="Birthday website for my friend Mateo">
     <meta name="author" content="Pablo Moreno">
 
