last uodate 4 mateo

--- a/para-mateo/index.html
+++ b/para-mateo/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <img src="assets/img/heart1.png" id="mateo" alt="mateo smiling, showing the Ok finger, after a bath on the lake"
-            class="animate__animated boomboom">
+            class="animate__animated animate__repeat boomboom">
 
         <div class="down">
             <p>28 de agosto 2023</p>
@@ -42,6 +42,7 @@
         <canvas id="canvas"></canvas>
     </div>
 
+    <audio id="sound" src="sound.mp3" preload="auto"></audio>
 
     <script id="script" src="assets/js/which-color.js"></script>
     <script id="script" src="assets/js/jquery-3.7.0.min.js"></script>
