--- a/lyrics/index.html
+++ b/lyrics/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>LYRICS</title>
+    <title>Lyrics</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <div class="songContent"></div>
+    <div class="songContent">
+        <span id="start">Select a song to start!</span>
+    </div>
 
 
     <div id="blocks" class="blocks"></div>
