--- a/pages/index.html
+++ b/pages/index.html
@@ -31,6 +31,13 @@
   <script id="script" src="assets/js/script.js"></script>
   <!-- <script id="script" src="../assets/js/thisColor.js"></script> -->
 
+  <audio id="sound" src="assets/sound.mp3" preload="auto"></audio>
+
+  <script>
+
+
+  </script>
 
 </body>
+
 </html>
